DE-123 increase the memory for the test runs